Multi-module with one autoconfigure module